# Trading-Bot

./: .gitignore  CMakeLists.txt  README.md  financial_analysis.py  launcher.py  scope.txt  trading_bot.py
include/: DataFetcher.hpp  FinancialCalculator.hpp  ProfitabilityMetrics.hpp  RiskAnalysis.hpp  TradingBot.hpp
src/: DataFetcher.cpp  FinancialCalculator.cpp  ProfitabilityMetrics.cpp  RiskAnalysis.cpp  TradingBot.cpp  main.cpp
tests/: test_financial.cpp
